# horus-singularity

./: .gitignore  .mit.tmpl  .pre-commit-config.yaml  LICENSE  Makefile  README.md  pyproject.toml
.github/workflows/: python-ci.yaml  release.yaml
src/horus_singularity/: i18n.py
src/horus_singularity/executor/: singularity.py
src/horus_singularity/locale/: messages.pot
src/horus_singularity/locale/en/LC_MESSAGES/: horus_singularity.po
tests/: conftest.py
tests/unit/: __init__.py  test_singularity_executor.py
