[project]
name = "horus_singularity"
version = "0.0.1"
description = "A Horus runtime plugin that runs task commands inside Singularity/Apptainer containers."
requires-python = ">=3.13"
classifiers = [
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
]
dependencies = ["horus-runtime>=0.2.0"]

# ================
# Plugin entry-points
# ================
[project.entry-points."horus.executor"]
singularity = "horus_singularity.executor.singularity"

# ================

[dependency-groups]
dev = [
  "babel~=2.0",
  "licenseheaders~=0.8",
  "mypy~=1.19",
  "pre_commit~=4.0",
  "pytest~=9.0",
  "pytest-asyncio~=1.3.0",
  "pytest-cov~=7.0",
  "ruff~=0.15",
  "types-PyYAML~=6.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.coverage.run]
source = ["horus_singularity"]

[tool.coverage.report]
omit = ["tests/*"]

[tool.hatch.build]
artifacts = ["src/horus_singularity/locale/**/LC_MESSAGES/*.mo"]

[tool.hatch.build.targets.wheel]
packages = ["src/horus_singularity"]

[tool.mypy]
python_version = "3.13"
strict = true
exclude = ["build", "dist"]
plugins = ["pydantic.mypy"]

[tool.pydantic-mypy]
init_typed = true
init_forbid_extra = true
warn_required_dynamic_aliases = true

[tool.pytest.ini_options]
addopts = """
    --verbose
    --cov=src/horus_singularity
    --cov-report=html
    --cov-report=term-missing
    --cov-fail-under=90
"""
minversion = "7.0"
python_classes = ["Test*"]
python_files = ["test_*.py", "*_test.py"]
python_functions = ["test_*"]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.ruff]
line-length = 79
target-version = "py313"
exclude = [".git", ".venv", "build", "dist", "__pycache__"]

[tool.ruff.lint]
select = [
  "D",  # pydocstyle
  "E",  # pycodestyle errors
  "W",  # pycodestyle warnings
  "F",  # pyflakes
  "I",  # isort
  "N",  # pep8-naming
  "UP",  # pyupgrade
  "B",  # flake8-bugbear
  "PL",  # pylint
  "RUF",  # ruff-specific
  "ARG",  # ruff-arglint
  "SLF",  # ruff-slf
]
extend-select = ["T201"]  # Prevent use of print()

ignore = [
  "E203",  # Whitespace before ':', conflicts with formatter
  "D104",  # Missing docstring in __init__ (often redundant)
  "D205",  # 1 blank line required between summary line and description
  "D212",  # Multi-line docstring summary should start at the first line
  "D200",  # One-line docstring should fit on one line
  "PLR2004"  # Magic numbers are ok
]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["SLF001"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
